# mirage

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  cabal.project  mirage.cabal  uuagc_options
app/: Main.hs
report/: references.bib  report.tex
src/: Mirage.hs
src/Mirage/: AG.ag  AbstractSyntax.ag  Cairo.hs  CommonTypes.hs  DependencyGraph.ag  Instances.hs  NontsAndProds.ag  RenderShapes.ag  Shape.hs  StaticInfo.ag
