cabal-version:      2.0
name:               mirage
version:            0.1.0.0
license-file:       LICENSE
maintainer:         jaro.reinders@gmail.com
author:             Jaro Reinders
build-type:         Custom
extra-source-files:
  CHANGELOG.md
  uuagc_options
  src/Mirage/RenderShapes.ag
  src/Mirage/NontsAndProds.ag
  src/Mirage/AbstractSyntax.ag

custom-setup
  setup-depends:
      base         >=4.13   && <4.15
    , Cabal        >=3.0
    , uuagc        ^>=0.9.53
    , uuagc-cabal  ^>=1.2

library
  exposed-modules:
    Mirage
    Mirage.AbstractSyntax
    Mirage.Cairo
    Mirage.CommonTypes
    Mirage.Instances
    Mirage.NontsAndProds
    Mirage.RenderShapes
    Mirage.Shape

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson
    , base          >=4.13 && <4.15
    , cairo         ^>=0.13
    , containers    ^>=0.6
    , mtl
    , text          ^>=1.2
    , transformers

executable mirage
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      aeson
    , base             >=4.13 && <4.15
    , bytestring
    , cairo            ^>=0.13
    , containers       ^>=0.6
    , gi-cairo         ^>=1.0
    , gi-gdk           ^>=3.0
    , gi-gio           ^>=2.0
    , gi-gtk           ^>=3.0
    , haskell-gi-base  ^>=0.24
    , mirage
    , mtl              ^>=2.2
    , text             ^>=1.2
